Fixes #60 and part of #59 (whitespace below post, first issue in screenshot)

--- a/assets/sass/partials/_main.scss
+++ b/assets/sass/partials/_main.scss
@@ -110,6 +110,7 @@ p {
   margin: 0 0 16px;
   padding: 0;
 }
+b,
 strong {
   font: {
     weight: 700;
@@ -162,12 +163,6 @@ cite {
 abbr[title]{
   border: {
     bottom:1px dotted;
-  }
-}
-b,
-strong {
-  font: {
-    weight:700;
   }
 }
 dfn {
@@ -3184,7 +3179,7 @@ img#wpstats {
     max-width:100%;
   }
   .entry {
-    padding:0;
+    padding:0 0 16px;
     margin: {
       left:0;
       right:0;
